--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,17 +1,19 @@
+$kmaxOrange: #F26722;
+$kMaxBlue: rgb(143,162,173);
+
+
 body,
 html {
   height: 100%;
   width:100%;
   margin: 0 auto;
-  letter-spacing: 2px;
-  font-size: 10px;
+  // letter-spacing: 2px;
+  // font-size: 10px;
 }
 
 /*固定する背景*/
 section {
   box-sizing: border-box;
-//   color: #FFF;
-  font-size: 5rem;
 //   display: flex;
 //   align-items: center;
 //   justify-content: center;
@@ -27,37 +29,147 @@ section {
 
 }
 
-.parallax-bg-2 {
-    background-image: url('/assets/images/top-image-pc.png');
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+.section02 {
     height:50%;
     display: flex;
     align-items: center;
     justify-content: center;
     .info {
-        width:400px;
+        max-width:450px;
+        width:100%;
         background:white;
+        padding:20px 10px;
+        border-radius:5px;
+        p {
+          font-size:20px;
+          text-align: center;
+          span {
+            font-weight: bold;
+            color: #B91313;
+            font-size: 24px;
+          }
+        }
+        .btn {
+          width:100%;
+          .kmx-register {
+            font-size: 20px;
+            margin:10px auto;
+            text-align: center;
+            background:$kmaxOrange;
+            color:#fff;
+            &:hover {
+              background: #fff;
+              border: 1px solid $kmaxOrange;
+              color:$kmaxOrange;
+            }
+          }
+        }
+    }
+    
+}
+
+.top {
+  background-image: url('/assets/images/top-image-pc.png');
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bottom {
+  background: rgb(62,62,62);
+  background: linear-gradient(0deg, rgba(62,62,62,1) 0%, rgba(255,255,255,1) 73%);
+  .container {
+    .row {
+      .video-iframe {
+        aspect-ratio: 16/9;
+      }
+      .text-area {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     }
   }
+}
+
+
 
 /*スクロールするコンテンツ*/
-.section01 {
-  background-color: #111;
-}
 
-.section02 {
-    background-color: rgba(255,0,0);
-}
+
+
 
 .section03 {
-    background-color:navy;
+    background-color:$kMaxBlue;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    .selling-point {
+      width:83.33333%;
+      max-width:1600px;
+      margin:0 auto;
+      // background:$kmaxOrange;
+      h1 {
+        text-align: center;
+        margin-bottom:90px;
+      }
+      .main-points {
+        display: flex;
+        justify-content: space-between;
+        .point {
+          width:90%;
+          max-width:420px;
+          border-radius:0;
+          box-shadow:13px 25px 12px rgba(0,0,0,0.62);
+          h4 {
+            margin-top:3vh;
+          }
+        }
+      }
+    }
 }
 
 .section04 {
     background-color:antiquewhite;
+    .section04-01 {
+      padding-top:6vh;
+      // position:relative;
+      // width:50%;
+      h4 {
+        text-align: center;  
+        span {
+          display: inline-block;
+          border-radius: 50%;
+          border: 2px solid;
+          margin:0 10px 0 5px;
+          // font-size: 32px;
+          &:before {
+            content: '\200B';
+            display: inline-block;
+            line-height: 0px;
+            padding-top: 50%;
+            padding-bottom: 50%;
+            padding-left: 3px;
+          }
+          &:after {
+            content: '\200B';
+            display: inline-block;
+            line-height: 0px;
+            padding-top: 50%;
+            padding-bottom: 50%;
+            padding-right: 3px;
+          }
+        }
+      }
+      p {
+        text-align: center;
+        margin:3vh auto;
+        line-height:2em;
+        font-size:1.25em;
+      }
+      
+    }
 }
 
 .section05 {
