--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,7 +9,6 @@ html {
 /*固定する背景*/
 section {
   box-sizing: border-box;
-  height: 100%;
 }
 
 .parallax-bg {
@@ -18,6 +17,72 @@ section {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  height: 100%;
+}
+
+.parallax-bg-bottom {
+  position: relative;
+  background-image: url("/assets/images/top-image-pc.png");
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+}
+.parallax-bg-bottom .logo {
+  width: 45%;
+  margin: 0 auto;
+  padding: 6vh 0 3vh;
+}
+.parallax-bg-bottom .logo h1 {
+  background: rgba(0, 0, 0, 0.62);
+  padding: 3vh 3vw;
+}
+.parallax-bg-bottom .container h3 {
+  color: #F26722;
+}
+.parallax-bg-bottom .container h3 span {
+  background: rgba(0, 0, 0, 0.62);
+}
+.parallax-bg-bottom .container h6 {
+  font-size: 1.5em;
+}
+.parallax-bg-bottom .container h6 span {
+  background: rgba(255, 255, 255, 0.8);
+}
+.parallax-bg-bottom .container .price .price-t {
+  background: #8FA2AD;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+.parallax-bg-bottom .container .price .price-b {
+  text-align: center;
+  background: white;
+  padding: 3vh 0;
+}
+.parallax-bg-bottom footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-around;
+  background: white;
+  padding-top: 5px;
+}
+.parallax-bg-bottom footer .left ul {
+  list-style-type: none;
+}
+.parallax-bg-bottom footer .left ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+.parallax-bg-bottom footer .middle {
+  font-size: 1em;
+}
+.parallax-bg-bottom footer .right {
+  font-size: 1em;
 }
 
 .section02 {
@@ -89,7 +154,7 @@ section {
 .section03 .selling-point {
   width: 83.33333%;
   max-width: 1600px;
-  margin: 0 auto;
+  margin: 10vh auto;
 }
 .section03 .selling-point h1 {
   text-align: center;
@@ -109,12 +174,6 @@ section {
   margin-top: 3vh;
 }
 
-.section04 {
-  background-color: antiquewhite;
-}
-.section04 .section04-01 {
-  padding-top: 6vh;
-}
 .section04 .section04-01 h4 {
   text-align: center;
 }
@@ -142,21 +201,171 @@ section {
 }
 .section04 .section04-01 p {
   text-align: center;
-  margin: 3vh auto;
-  line-height: 2em;
   font-size: 1.25em;
+}
+.section04 .section04-02 .categories {
+  padding: 0 20px;
+}
+.section04 .section04-02 .categories .category {
+  background: #c9b783;
+  padding: 0;
+  display: flex;
+  width: 95%;
+  margin: 5px auto;
+}
+.section04 .section04-02 .categories .category .category-image img {
+  width: 100%;
+}
+.section04 .section04-02 .categories .category .category-text {
+  padding: 10px 5px;
+  line-height: 1em;
+}
+.section04 .section04-02 .categories .category .category-text h5 {
+  color: navy;
+  margin-bottom: 10px;
+}
+.section04 .section04-02 .categories .category .category-text p {
+  text-align: left;
+  line-height: 1.25em;
+  font-size: 1em;
 }
 
 .section05 {
   background-color: rebeccapurple;
 }
+.section05 .text h4 {
+  text-align: center;
+}
+.section05 .text h4 span {
+  display: inline-block;
+  border-radius: 50%;
+  border: 2px solid;
+  margin: 0 10px 0 5px;
+}
+.section05 .text h4 span:before {
+  content: "​";
+  display: inline-block;
+  line-height: 0px;
+  padding-top: 50%;
+  padding-bottom: 50%;
+  padding-left: 3px;
+}
+.section05 .text h4 span:after {
+  content: "​";
+  display: inline-block;
+  line-height: 0px;
+  padding-top: 50%;
+  padding-bottom: 50%;
+  padding-right: 3px;
+}
 
 .section06 {
   background-color: yellow;
 }
+.section06 .container-fluid .view-settings {
+  margin: 0 auto;
+}
 
 .section07 {
   background-color: bisque;
+}
+.section07 .text h4 {
+  text-align: center;
+}
+.section07 .text h4 span {
+  display: inline-block;
+  border-radius: 50%;
+  border: 2px solid;
+  margin: 0 10px 0 5px;
+}
+.section07 .text h4 span:before {
+  content: "​";
+  display: inline-block;
+  line-height: 0px;
+  padding-top: 50%;
+  padding-bottom: 50%;
+  padding-left: 3px;
+}
+.section07 .text h4 span:after {
+  content: "​";
+  display: inline-block;
+  line-height: 0px;
+  padding-top: 50%;
+  padding-bottom: 50%;
+  padding-right: 3px;
+}
+
+.section08 .contents {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+.section08 .contents .section08-text {
+  text-align: center;
+  background: red;
+}
+
+@media screen and (max-width: 768px) {
+  .parallax-bg, .top {
+    background-image: url("/assets/images/top-image-ph.png");
+  }
+}
+@media screen and (max-width: 520px) {
+  .section03 {
+    background-color: #8fa2ad;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .section03 .selling-point {
+    width: 83.33333%;
+    max-width: 1600px;
+    margin: 5vh auto 10vh;
+  }
+  .section03 .selling-point h1 {
+    text-align: center;
+    margin-bottom: 90px;
+  }
+  .section03 .selling-point .main-points {
+    display: flex;
+    flex-direction: column;
+  }
+  .section03 .selling-point .main-points .point {
+    width: 90%;
+    max-width: 420px;
+    border-radius: 0;
+    margin: 2vh auto;
+    box-shadow: 13px 25px 12px rgba(0, 0, 0, 0.62);
+  }
+  .section03 .selling-point .main-points .point h4 {
+    margin-top: 3vh;
+  }
+  .section03 .section04 {
+    height: 100%;
+  }
+
+  .section06 {
+    background-color: yellow;
+    padding: 6vh 0;
+  }
+  .section06 .container-fluid .text {
+    margin-bottom: 4vh;
+  }
+  .section06 .container-fluid .view-settings {
+    width: 90%;
+    margin: 10px auto;
+  }
+  .section06 .container-fluid .view-settings p {
+    font-weight: bold;
+  }
+
+  .parallax-bg-bottom {
+    overflow-y: scroll;
+  }
+  .parallax-bg-bottom .container .price {
+    width: 75%;
+    margin: 10px auto;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
