--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -29,6 +29,35 @@ section {
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
+  display: flex;
+    justify-content: center;
+    align-items: center;
+  
+  // position: relative;
+  .nav {
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:4;
+  }
+  .top-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // background:white;
+    // margin-top:20vh;
+    .top-title {
+      
+      .text-space {
+        margin-top:5vh;
+        background:rgba(255,255,255,0.9);
+        font-size:1.25em;
+        font-weight:bold;
+        line-height: 2em;
+        padding:4vh 0;
+      }
+    }
+  }
 }
 
 .parallax-bg-bottom {
@@ -442,6 +471,14 @@ section {
       .price {
         width:75%;
         margin:10px auto;
+      }
+    }
+    footer {
+      margin-top:10vh;
+      position:relative;
+      flex-direction: column;
+      .left, .right, .middle {
+        text-align: center;
       }
     }
   }
