--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -214,8 +214,8 @@ section {
     align-items: center;
     justify-content: center;
     .selling-point {
-      width:83.33333%;
-      max-width:1600px;
+      width:100%;
+      max-width:1440px;
       margin:10vh auto;
       // background:$kmaxOrange;
       h1 {
@@ -227,7 +227,8 @@ section {
         justify-content: space-between;
         .point {
           width:90%;
-          max-width:420px;
+          min-width:256px;
+          max-width:400px;
           border-radius:0;
           box-shadow:13px 25px 12px rgba(0,0,0,0.62);
           h4 {
@@ -241,37 +242,42 @@ section {
 .section04 {
     
     .section04-01 {
-      h4 {
-        text-align: center;  
-        span {
-          display: inline-block;
-          border-radius: 50%;
-          border: 2px solid;
-          margin:0 10px 0 5px;
-          // font-size: 32px;
-          &:before {
-            content: '\200B';
+      display: flex;
+      flex-direction:column;
+      .text {
+        padding:4vh 0;
+        h4 {
+          text-align: center;  
+          span {
             display: inline-block;
-            line-height: 0px;
-            padding-top: 50%;
-            padding-bottom: 50%;
-            padding-left: 3px;
-          }
-          &:after {
-            content: '\200B';
-            display: inline-block;
-            line-height: 0px;
-            padding-top: 50%;
-            padding-bottom: 50%;
-            padding-right: 3px;
+            border-radius: 50%;
+            border: 2px solid;
+            margin:0 10px 0 5px;
+            // font-size: 32px;
+            &:before {
+              content: '\200B';
+              display: inline-block;
+              line-height: 0px;
+              padding-top: 50%;
+              padding-bottom: 50%;
+              padding-left: 3px;
+            }
+            &:after {
+              content: '\200B';
+              display: inline-block;
+              line-height: 0px;
+              padding-top: 50%;
+              padding-bottom: 50%;
+              padding-right: 3px;
+            }
           }
         }
-      }
-      p {
-        text-align: center;
-        // margin:3vh auto;
-        // line-height:2em;
-        font-size:1.25em;
+        p {
+          text-align: center;
+          // margin:3vh auto;
+          // line-height:2em;
+          font-size:1.25em;
+        }
       }
     }
     .section04-02 {
@@ -355,7 +361,8 @@ section {
 }
 
 .section07 {
-    background-color:bisque;
+    background-color:black;
+    color:#fff;
     // height: 100%;
     .text {
       h4 {
@@ -385,6 +392,35 @@ section {
         }
       }
     }
+    .curriculum {
+      color:#000;
+      background:#fff;
+      margin:8vh auto;
+      .drop-select {
+
+        .field {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+      }
+      .display-contents {
+        .type {
+          background:rgb(168,160,136);
+          padding:10px 20px;
+        }
+        h6 {
+          margin: 5vh 0 1vh;
+        }
+        .inner-text {
+          background:#fff;
+          padding:5px;
+        }
+      }
+      .display-contents.cut-tr-perm {
+        display:block;
+      }
+    }
 }
 
 .section08 {
@@ -401,9 +437,43 @@ section {
 }
 
 
+@media screen and (max-width:1200px) {
+  .section03 {
+    // justify-content: space-between;
+    .selling-point {
+      max-width:1200px;
+      margin:10vh 0;
+      .main-points {
+        .point {
+          width:100%;
+          max-width:350px;
+        }
+      }
+    }
+  }
+}
 
 
-
+@media screen and (max-width:992px) {
+  .section03 {
+    // justify-content: space-between;
+    .selling-point {
+      max-width:100%;
+      padding:0 10px;
+      margin:10vh 0;
+      .main-points {
+        .point {
+          h4 {
+            font-size: 1.1em;
+          }
+          p {
+            font-size:0.9em;
+          }
+        }
+      }
+    }
+  }
+}
 
 
 
@@ -411,6 +481,22 @@ section {
 @media screen and (max-width:768px) {
   .parallax-bg, .top {
     background-image: url('/assets/images/top-image-ph.png');
+  }
+
+  .section03 {
+    .selling-point {
+      h1 {
+        text-align: center;
+        margin-bottom:90px;
+      }
+      .main-points {
+        display: flex;
+        flex-direction: column;
+        .point {
+          margin:2vh auto;
+        }
+      }
+    }
   }
 }
   
@@ -423,7 +509,7 @@ section {
     justify-content: center;
     .selling-point {
       width:83.33333%;
-      max-width:1600px;
+      // max-width:1600px;
       margin:5vh auto 10vh;
       // background:$kmaxOrange;
       h1 {
@@ -435,7 +521,7 @@ section {
         flex-direction: column;
         .point {
           width:90%;
-          max-width:420px;
+          // max-width:420px;
           border-radius:0;
           margin:2vh auto;
           box-shadow:13px 25px 12px rgba(0,0,0,0.62);
