--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -337,6 +337,10 @@ section {
   margin-bottom: 0;
 }
 
+.modal {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 .section07 {
   background-color: black;
   color: #fff;
